# opncheck

./: .gitignore  Cargo.toml  README.md  devenv.nix  install.sh  opncheck.example.toml  opnsense_checkmk_agent.py
.github/workflows/: release.yml
docs/: freebsd-plugin.md  ssh-checkmk.md
src/: cli.rs  config.rs  exec.rs  install.rs  lib.rs  main.rs  platform.rs  setup.rs  update.rs
src/agent/: extensions.rs  mod.rs  output.rs
src/checks/: dhcp.rs  firmware.rs  gateway.rs  haproxy.rs  ipsec.rs  kea.rs  mod.rs  nginx.rs  opnsense.rs  pkgaudit.rs  services.rs  suricata.rs  system.rs  unbound.rs  utils.rs  wireguard.rs
src/checks/meta/: mod.rs  status.rs  timings.rs  version.rs
src/checks/opnsense/: firmware.rs  gateway.rs  kea.rs  mod.rs  nginx.rs  pkgaudit.rs  unbound.rs  wireguard.rs
src/checks/opnsense/suricata/: mod.rs  state.rs
src/checks/suricata/: eve.rs  mod.rs  reader.rs  state.rs
src/exec/: mod.rs  safety.rs
src/opnsense/: config_xml.rs  mod.rs
src/opnsense/config_xml/: dhcpd.rs  enabled.rs  gateways.rs  haproxy.rs  interfaces.rs  ipsec.rs  mod.rs  nginx.rs  opnsense_section.rs  system.rs  unbound.rs  wireguard.rs
src/output/: mod.rs
src/plugin/: mod.rs  output.rs
src/scripts/: mod.rs
src/setup/: binary.rs  config.rs  key.rs  mod.rs  packages.rs  plugin.rs
src/setup/opnsense/: key.rs  mod.rs  packages.rs
src/tasks/: mod.rs
src/utils/: catch_missing.rs  fs.rs  mod.rs  percentage.rs
src/xml/: mod.rs  wireguard.rs
