[package]
name = "opncheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
jiff = { version = "0.2.24", features = ["serde"] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sscanf = "0.4"
strum = { version = "0.28.0", features = ["derive"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
