[package]
name = "opncheck"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
jiff = { version = "0.2.24", features = ["serde"] }
quick-xml = { version = "0.40", features = ["serialize"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
self_update = { version = "0.44.0", default-features = false, features = ["rustls", "reqwest"] }
semver = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sscanf = "0.5"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3"
toml = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
